# crypto-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/testing/: TESTING.md
src/crypto_scanner/: __init__.py  cli.py  models.py  patterns.py  scanner.py
src/crypto_scanner/analyzers/: __init__.py  base.py  certificate.py  config.py  source.py
src/crypto_scanner/reporters/: __init__.py  html_reporter.py  json_reporter.py
tests/: __init__.py  test_analyzers.py  test_scanner.py
tests/fixtures/: sample_config.yaml  sample_crypto.py  sample_java.java
